--- a/playbook.yml
+++ b/playbook.yml
@@ -8,3 +8,11 @@
         name: ufw
         state: stopped
         enabled: false
+    - name: "Build hosts file"
+      lineinfile:
+        dest: /etc/hosts
+        regexp: '.*{{ item }}$'
+        line: "{{ hostvars[item].ansible_default_ipv4.address }} {{item}}"
+        state: present
+      when: hostvars[item].ansible_default_ipv4.address is defined
+      loop: "{{ groups['all'] }}"
